Fix white button bug in out of bounds link

--- a/assets/app.css
+++ b/assets/app.css
@@ -259,6 +259,7 @@ header svg {
   padding: 0;
   border: 0;
   color: #fff;
+  background-color: transparent;
   text-decoration: underline;
 }
 
